# server/schemas/__init__.py
@@ -11,6 +11,9 @@ from .assets import (
     MergeGroupRequest,
     PdfMetadataModel,
     PdfPageTextBoxesModel,
+    PdfSearchMatchModel,
+    PdfSearchRequest,
+    PdfSearchResponse,
     PdfTextBoxModel,
     PreviewMergeMarkdownRequest,
     PreviewMergeMarkdownResponse,
@@ -68,6 +71,9 @@ __all__ = [
     "MessageResponse",
     "PdfMetadataModel",
     "PdfPageTextBoxesModel",
+    "PdfSearchMatchModel",
+    "PdfSearchRequest",
+    "PdfSearchResponse",
     "PdfTextBoxModel",
     "PreviewMergeMarkdownRequest",
     "PreviewMergeMarkdownResponse",
